--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<span class="space"/><span class="comments">* We are both Fudan SSers and programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to celebrate our 1st anniversary.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"王小二"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"张小丽"</span>);<br />
 				<span class="comments">// Nov 2, 2010, I told you I love you. </span><br />
 				i.love(u);<br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
@@ -50,12 +50,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Minyue, I have fallen in love with you for
+						王小二和张小丽已经相爱了
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						<div class="signature">- 王小二</div>
 					</div>
 				</div>
 			</div>
